#87 fix gradle run by adding opens directive