@@ -157,6 +157,7 @@ application {
     applicationName = 'Jiotty Photos Uploader'
     applicationDefaultJvmArgs = ['--add-exports', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
                                  '--add-opens', 'javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED',
+                                 '--add-opens', 'javafx.controls/javafx.scene.control=ALL-UNNAMED',
                                  '--add-exports', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
                                  '--add-exports', 'javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
                                  '--add-exports', 'javafx.graphics/com.sun.javafx.menu=ALL-UNNAMED']
